// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlantImageGallery > добавляет только подходящие файлы и пишет ошибку по имени 1`] = `
<div>
  <div
    class="plant-image-gallery"
  >
    <div
      class="ant-typography ant-typography-secondary"
    >
      На плитке каталога показывается фото по умолчанию или последнее загруженное. В превью плитки можно листать все фото.
    </div>
    <div
      class="plant-image-gallery__list"
    >
      <div
        class="plant-image-gallery__item"
      >
        <div
          class="ant-image"
          style="width: 128px; height: 128px;"
          title="Нажмите для просмотра"
        >
          <img
            alt="Фото растения"
            class="ant-image-img"
            height="128"
            src="/thumb/cover.jpg"
            style="height: 128px; cursor: pointer; object-fit: cover; border-radius: 8px;"
            width="128"
          />
          <div
            class="ant-image-mask"
          >
            <div
              class="ant-image-mask-info"
            >
              <span
                aria-label="eye"
                class="anticon anticon-eye"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="eye"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                  />
                </svg>
              </span>
              Предпросмотр
            </div>
          </div>
        </div>
        <div
          class="plant-image-gallery__actions"
        >
          <button
            class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            disabled=""
            type="button"
          >
            <span>
              Сбросить
            </span>
          </button>
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
            disabled=""
            type="button"
          >
            <span>
              Состояние
            </span>
          </button>
          <button
            aria-describedby="id"
            class="ant-btn ant-btn-default ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-outlined ant-btn-block"
            disabled=""
            type="button"
          >
            <span>
              Удалить
            </span>
          </button>
        </div>
      </div>
      <div
        class="plant-image-gallery__item"
      >
        <div
          class="ant-image"
          style="width: 128px; height: 128px;"
          title="Нажмите для просмотра"
        >
          <img
            alt="Фото растения"
            class="ant-image-img"
            height="128"
            src="/thumb/side.jpg"
            style="height: 128px; cursor: pointer; object-fit: cover; border-radius: 8px;"
            width="128"
          />
          <div
            class="ant-image-mask"
          >
            <div
              class="ant-image-mask-info"
            >
              <span
                aria-label="eye"
                class="anticon anticon-eye"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="eye"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                  />
                </svg>
              </span>
              Предпросмотр
            </div>
          </div>
        </div>
        <div
          class="plant-image-gallery__actions"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
            disabled=""
            type="button"
          >
            <span>
              По умолчанию
            </span>
          </button>
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
            disabled=""
            type="button"
          >
            <span>
              Состояние
            </span>
          </button>
          <button
            aria-describedby="id"
            class="ant-btn ant-btn-default ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-outlined ant-btn-block"
            disabled=""
            type="button"
          >
            <span>
              Удалить
            </span>
          </button>
        </div>
      </div>
    </div>
    <span
      class="ant-upload-wrapper"
    >
      <div
        class="ant-upload ant-upload-select ant-upload-disabled"
      >
        <span
          class="ant-upload ant-upload-disabled"
        >
          <input
            accept="image/jpeg,image/png,image/webp"
            disabled=""
            multiple=""
            name="file"
            style="display: none;"
            type="file"
          />
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
            disabled=""
            type="button"
          >
            <span>
              Добавить фото
            </span>
          </button>
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`PlantImageGallery > не даёт удалить единственное фото 1`] = `
<div>
  <div
    class="plant-image-gallery"
  >
    <div
      class="ant-typography ant-typography-secondary"
    >
      На плитке каталога показывается фото по умолчанию или последнее загруженное. В превью плитки можно листать все фото.
    </div>
    <div
      class="plant-image-gallery__list"
    >
      <div
        class="plant-image-gallery__item"
      >
        <div
          class="ant-image"
          style="width: 128px; height: 128px;"
          title="Нажмите для просмотра"
        >
          <img
            alt="Фото растения"
            class="ant-image-img"
            height="128"
            src="/thumb/only.jpg"
            style="height: 128px; cursor: pointer; object-fit: cover; border-radius: 8px;"
            width="128"
          />
          <div
            class="ant-image-mask"
          >
            <div
              class="ant-image-mask-info"
            >
              <span
                aria-label="eye"
                class="anticon anticon-eye"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="eye"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                  />
                </svg>
              </span>
              Предпросмотр
            </div>
          </div>
        </div>
        <div
          class="plant-image-gallery__actions"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
            type="button"
          >
            <span>
              Состояние
            </span>
          </button>
          <span
            aria-describedby="id"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-outlined ant-btn-block"
              disabled=""
              type="button"
            >
              <span>
                Удалить
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <span
      class="ant-upload-wrapper"
    >
      <div
        class="ant-upload ant-upload-select"
      >
        <span
          class="ant-upload"
        >
          <input
            accept="image/jpeg,image/png,image/webp"
            multiple=""
            name="file"
            style="display: none;"
            type="file"
          />
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
            type="button"
          >
            <span>
              Добавить фото
            </span>
          </button>
        </span>
      </div>
    </span>
  </div>
</div>
`;
